--- a/.github/workflows/publish-lib.yml
+++ b/.github/workflows/publish-lib.yml
@@ -26,4 +26,4 @@ jobs:
           -DrepositoryId=github
           -Durl=https://maven.pkg.github.com/boris-ning-usds/phinvad-client
         env:
-          GITHUB_TOKEN: ${{ secrets.JAVA_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
