--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
-name: Build Java Jar on Tag Release
+name: Build Java Jar on Push to main
 
 on:
   workflow_dispatch:
   push:
-    branches: ['develop', 'main']
+    branches: ['main']
 
 jobs:
   publish:
@@ -32,5 +32,3 @@ jobs:
           -DrepositoryId=github
           -Durl=https://maven.pkg.github.com/boris-ning-usds/phinvad-client
           -Dtoken=${{ secrets.GITHUB_TOKEN }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
